@startuml

title __STATES's Class Diagram__\n

  namespace Enemies {
    namespace States {
      class Enemies.States.Attack {
          - canAttack : boolean
          + Attack()
          + init()
          + update()
      }
    }
  }
  

  namespace Enemies {
    namespace States {
      abstract class Enemies.States.EnemyState {
          {static} # distanceToAttack : int
          {static} # distanceToFollow : int
          {static} # distanceToPatrol : int
          {static} # height : int
          # horizontalSpeed : int
          {static} + getDistanceToAttack()
          {static} + getDistanceToPatrol()
          {abstract} + init()
          {abstract} + update()
      }
    }
  }
  

  namespace Enemies {
    namespace States {
      class Enemies.States.Follow {
          + Follow()
          + init()
          + update()
      }
    }
  }
  

  namespace Enemies {
    namespace States {
      class Enemies.States.GoToStart {
          + GoToStart()
          + init()
          + update()
      }
    }
  }
  

  namespace Enemies {
    namespace States {
      class Enemies.States.Patrol {
          + Patrol()
          + init()
          + update()
      }
    }
  }
  

  Enemies.States.Attack -up-|> Enemies.States.EnemyState
  Enemies.States.EnemyState o-- Enemies.Enemy : thisEnemy
  Enemies.States.Follow -up-|> Enemies.States.EnemyState
  Enemies.States.GoToStart -up-|> Enemies.States.EnemyState
  Enemies.States.Patrol -up-|> Enemies.States.EnemyState


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
